fixed minor bugs caused by 'flex gap' property

--- a/src/styles/components/_benefits.scss
+++ b/src/styles/components/_benefits.scss
@@ -176,17 +176,18 @@
       &__info {
         flex-direction: row;
         align-items: center;
-        gap: 20px;
         margin-left: 21px;
       }
 
       &__list {
         display: flex;
         flex-direction: column;
-        gap: 21px;
+        margin-right: 20px;
       }
 
       &__item {
+        margin-bottom: 21px;
+
         &--move {
           order: 1;
           padding-left: 0;
