--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -40,19 +40,18 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 84px;
   }
 
   &__icons {
     display: flex;
-    gap: 85px;
+    margin-bottom: 84px;
   }
 
   &__icon {
     display: inline-block;
     width: 20px;
     height: 20px;
-    padding: 10px;
+    margin-right: 85px;
 
     background-repeat: no-repeat;
     background-size: cover;
@@ -69,6 +68,7 @@
 
     &--face {
       background-image: url("../images/vectors/vector-face.svg");
+      margin-right: 0;
     }
 
     &:hover {
@@ -78,8 +78,8 @@
 
   @media (max-width: 1150px) {
     & {
-      &__public {
-        gap: 28px;
+      &__icons {
+        margin-bottom: 28px;
       }
     }
   }
@@ -101,8 +101,8 @@
         display: none;
       }
 
-      &__public {
-        gap: 41px;
+      &__icons {
+        margin-bottom: 41px;
       }
 
       &__text {
