--- a/src/styles/components/_for__whom.scss
+++ b/src/styles/components/_for__whom.scss
@@ -13,13 +13,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 150px;
+
+    & > .presentation {
+      margin: 0 75px;
+    }
 
     @media (max-width: 1080px) {
       & {
         flex-direction: column;
         align-items: normal;
-        gap: 0;
+
+        & > .presentation {
+          margin: 0;
+        }
       }
     }
   }
