--- a/src/styles/components/_potr__size.scss
+++ b/src/styles/components/_potr__size.scss
@@ -44,9 +44,12 @@
     grid-area: dimensions;
     display: flex;
     flex-direction: column;
-    gap: 69px;
 
     width: 246px;
+  }
+
+  &__small {
+    margin-bottom: 69px;
   }
 
   &__image {
@@ -58,6 +61,7 @@
 
   &__notice {
     grid-area: notice;
+    align-self: end;
 
     width: 546px;
   }
@@ -119,11 +123,14 @@
       }
 
       &__dimensions {
-        gap: 37px;
-
         padding-top: 21px;
         margin-left: 0;
       }
+
+      &__small {
+        margin-bottom: 37px;
+      }
+
       &__image {
         width: 416px;
         height: 337px;
@@ -168,8 +175,12 @@
       &__dimensions {
         padding-top: 0;
         margin-left: 0;
-        gap: 40px;
       }
+
+      &__small {
+        margin-bottom: 40px;
+      }
+
       &__image {
         width: 100%;
         min-width: 320px;
