--- a/src/styles/components/_question.scss
+++ b/src/styles/components/_question.scss
@@ -48,7 +48,6 @@
 
   &__info {
     display: flex;
-    gap: 230px ;
   }
 
   &__text {
@@ -78,6 +77,7 @@
 
     &-wrap {
       margin-bottom: 160px;
+      margin-right: 230px;
     }
   }
 
@@ -125,8 +125,11 @@
   &__contacts {
     display: flex;
     flex-direction: column;
-    gap: 21px;
     margin-top: 68px;
+  }
+
+  &__item {
+    margin-bottom: 21px;
   }
 
   &__heading {
@@ -154,15 +157,14 @@
       }
 
       &__decor-text {
-        right: 30px;
+        right: 35px;
       }
 
       &__form {
         width: 340px;
-      }
-
-      &__info {
-        gap: 140px;
+        &-wrap {
+          margin-right: 140px;
+        }
       }
 
       &__contacts {
@@ -196,15 +198,15 @@
         width: 100%;
         flex-direction: column;
         align-items: center;
-        gap: 90px;
       }
 
       &__form {
         width: 100%;
-      }
 
-      &__form-wrap {
-        margin-bottom: 0;
+        &-wrap {
+          margin-right: 0;
+          margin-bottom: 90px;
+        }
       }
 
       &__input {
